--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="freebird.css" rel="stylesheet" type="text/css" nonce="9DHaVs+MXR1PPHr52CReug">
+<link rel="stylesheet" href="main.css" rel="stylesheet" type="text/css">
 </head>
 <form
     action="https://docs.google.com/forms/u/1/d/e/1FAIpQLSdyxv2IrWgV2S5IDpuh71JxI6LSFlDyGf0nPG_A0JcWoUiHfw/formResponse"
