cant sue me now

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@ required>
 <input type="submit" value="Submit">
 <input type="reset" value="Reset">
 </form>
+<br><br><br>
+<footer style="font-size:x-small">RAPID REACT℠ is a trademark of For Inspiration and
+    Recognition of Science and Technology (FIRST). ©2021 FIRST. All rights reserved. Used with permission.</footer>
 <script type="text/javascript" nonce="AAi61hs1sCHU+odyydjyug">
     var FB_PUBLIC_LOAD_DATA_ = [
         null,
