--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     data-last-entry="21"
     data-is-first-page="true"
 >
-<h1>2022 Scouting: Rapid React</h1>
+<h1>2022 Scouting: <b>RAPID REACT</b>℠</h1>
 <br>
 <h2>Pre-Match:<h4 style="color: gray;">Get this done <b>before</b> the match starts!</h4></h2>
 <fieldset>
+<label for="Your Name">Your Name<br></label>
 <input
 placeholder="John Doe"
 type="text"
@@ -29,6 +30,7 @@ required>
 </fieldset>
 
 <fieldset>
+<label for="Number of the Team you are Scouting">Number of the Team you are Scouting<br></label>
 <input
     placeholder="766"
     type="number"
@@ -39,6 +41,7 @@ required>
 </fieldset>
 
 <fieldset>
+<label for="Name of the Team you are Scouting">Name of the Team you are Scouting<br></label>
 <input
     placeholder="Bears"
     type="text"
@@ -47,8 +50,8 @@ required>
     id="Name of the Team you are Scouting"
     required>
 </fieldset>
-
 <fieldset>
+    <label for="Match Number">Match Number<br></label>
     <input
         placeholder="0001"
         type="number"
@@ -58,12 +61,12 @@ required>
         required>
 </fieldset>
 <br>
-<input type="submit" value="Submit">
-<input type="reset" value="Reset">
+<input type="submit" value="Submit Form">
+<input type="reset" value="Reset Form">
 </form>
 <br><br><br>
 <footer style="font-size:x-small">RAPID REACT℠ is a trademark of For Inspiration and
-    Recognition of Science and Technology (FIRST). ©2021 FIRST. All rights reserved. Used with permission.</footer>
+    Recognition of Science and Technology (FIRST). ©2021 FIRST. All rights reserved. Used with non-exclusive permission.</footer>
 <script type="text/javascript" nonce="AAi61hs1sCHU+odyydjyug">
     var FB_PUBLIC_LOAD_DATA_ = [
         null,
