--- a/index.html
+++ b/index.html
@@ -86,46 +86,52 @@ required>
     <br>
     <input
         placeholder="off"
+        value="off"
         type="checkbox"
         name="entry.321248479"
         data-name="Can the robot score in the Upper Hub?"
         id="Can the robot score in the Upper Hub?"
-        >Can the robot score in the Upper Hub?<br>
+        >The robot can score in the Upper Hub<br>
         <input
         placeholder="off"
+        value="off"
         type="checkbox"
         name="entry.1745221229"
         data-name="Can the robot score in the Lower Hub?"
         id="Can the robot score in the Lower Hub?"
-        >Can the robot score in the Lower Hub?<br>
+        >The robot can score in the Lower Hub<br>
         <input
         placeholder="off"
+        value="off"
         type="checkbox"
         name="entry.189327560"
         data-name="Can the robot climb to the low bar?"
         id="Can the robot climb to the low bar?"
-        >Can the robot climb to the low bar?<br>
+        >The robot can climb to the low bar<br>
         <input
         placeholder="off"
+        value="off"
         type="checkbox"
         name="entry.51519363"
         data-name="Can the robot climb to the mid bar?"
         id="Can the robot climb to the mid bar?"
-        >Can the robot climb to the mid bar?<br>
+        >The robot can climb to the mid bar<br>
         <input
         placeholder="off"
+        value="off"
         type="checkbox"
         name="entry.1343844870"
         data-name="Can the robot climb to the high bar?"
         id="Can the robot climb to the high bar?"
-        >Can the robot climb to the high bar?<br>
+        >The robot can climb to the high bar<br>
         <input
         placeholder="off"
+        value="off"
         type="checkbox"
         name="entry.332731239"
         data-name="Can the robot climb to the traversal bar?"
         id="Can the robot climb to the traversal bar?"
-        >Can the robot climb to the traversal bar?<br>
+        >The robot can climb to the traversal bar<br>
 </fieldset>
 <br>
 <input type="submit" value="Submit Form">
