--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     data-last-entry="32"
     data-is-first-page="true"
 >
-<h1>2022 Scouting: <b>RAPID REACT</b>℠</h1>
+<h1>2022 Scouting: RAPID REACT℠</h1>
 <br>
-<h2>Pre-Match:<h4 style="color: gray;">Get this done <b>before</b> the match starts!</h4></h2>
+<h2>Pre-Match:<h4 style="color: #a9a9a9;">&emsp;Get this done <b>before</b> the match starts!</h4></h2>
 <fieldset>
 <label for="Your Name">Your Name<br></label>
 <input
@@ -60,7 +60,7 @@ required>
         id="Match Number"
         required>
 </fieldset>
-<h2>Pit Scouting<h4 style="color: gray;">If you don't know the answer, just ask the team themselves</h4></h2>
+<h2>Pit Scouting<h4 style="color: #a9a9a9;">&emsp;If you don't know the answer, just ask the team themselves</h4></h2>
 <fieldset>
     <label for="How much cargo can the robot hold at a time?">How much cargo can the robot hold at a time?<br></label>
     <input
@@ -90,44 +90,44 @@ required>
         name="entry.321248479"
         data-name="Can the robot score in the Upper Hub?"
         id="Can the robot score in the Upper Hub?"
-        >The robot can score in the Upper Hub<br>
+        >&emsp;The robot can score in the Upper Hub<br>
         <input
         placeholder="off"
         type="checkbox"
         name="entry.1745221229"
         data-name="Can the robot score in the Lower Hub?"
         id="Can the robot score in the Lower Hub?"
-        >The robot can score in the Lower Hub<br>
+        >&emsp;The robot can score in the Lower Hub<br>
         <input
         placeholder="off"
         type="checkbox"
         name="entry.189327560"
         data-name="Can the robot climb to the low bar?"
         id="Can the robot climb to the low bar?"
-        >The robot can climb to the low bar<br>
+        >&emsp;The robot can climb to the low bar<br>
         <input
         placeholder="off"
         type="checkbox"
         name="entry.51519363"
         data-name="Can the robot climb to the mid bar?"
         id="Can the robot climb to the mid bar?"
-        >The robot can climb to the mid bar<br>
+        >&emsp;The robot can climb to the mid bar<br>
         <input
         placeholder="off"
         type="checkbox"
         name="entry.1343844870"
         data-name="Can the robot climb to the high bar?"
         id="Can the robot climb to the high bar?"
-        >The robot can climb to the high bar<br>
+        >&emsp;The robot can climb to the high bar<br>
         <input
         placeholder="off"
         type="checkbox"
         name="entry.332731239"
         data-name="Can the robot climb to the traversal bar?"
         id="Can the robot climb to the traversal bar?"
-        >The robot can climb to the traversal bar<br>
+        >&emsp;The robot can climb to the traversal bar<br>
 </fieldset>
-<h2>Match Scouting<h4 style="color: gray;">Record as the game goes on</h4></h2>
+<h2>Match Scouting<h4 style="color: #a9a9a9;">&emsp;Record as the game goes on</h4></h2>
 <fieldset>
     <label>Auton<br></label>
     <br>
@@ -137,28 +137,28 @@ required>
         name="entry.412041471"
         data-name="During Auton, did the robot successfully taxi from their tarmac, retrieve and score their assigned cargo into the hub?"
         id="During Auton, did the robot successfully taxi from their tarmac, retrieve and score their assigned cargo into the hub?"
-        >During Auton, the robot successfully taxied from their tarmac, retrieved and scored their assigned cargo into the hub<br>
+        >&emsp;During Auton, the robot successfully taxied from their tarmac, retrieved and scored their assigned cargo into the hub<br>
         <input
         placeholder="off"
         type="checkbox"
         name="entry.984983966"
         data-name="During Auton, did the robot successfully shoot cargo into the hubs?"
         id="During Auton, did the robot successfully shoot cargo into the hubs?"
-        >During Auton, the robot successfully shoot cargo into the hubs<br>
+        >&emsp;During Auton, the robot successfully shoot cargo into the hubs<br>
         <input
         placeholder="off"
         type="checkbox"
         name="entry.1220637130"
         data-name="During Auton, did the robot retrieve cargo from the field?"
         id="During Auton, did the robot retrieve cargo from the field?"
-        >During Auton, the robot retrieved cargo from the field<br>
+        >&emsp;During Auton, the robot retrieved cargo from the field<br>
         <input
         placeholder="off"
         type="checkbox"
         name="entry.1277000981"
         data-name="During Auton, did the robot fail to score points?"
         id="During Auton, did the robot fail to score points?"
-        >During Auton, the robot failed to score points<br>
+        >&emsp;During Auton, the robot failed to score points<br>
 </fieldset>
 <fieldset>
     <label>Attempted Actions<br></label>
@@ -169,21 +169,21 @@ required>
         name="entry.1157236568"
         data-name="Did the robot ATTEMPT to score in the Upper Hub?"
         id="Did the robot ATTEMPT to score in the Upper Hub?"
-        >The robot made an ATTEMPT to score in the Upper Hub<br>
+        >&emsp;The robot made an ATTEMPT to score in the Upper Hub<br>
         <input
         placeholder="off"
         type="checkbox"
         name="entry.794477414"
         data-name="Did the robot ATTEMPT to score in the Lower Hub?"
         id="Did the robot ATTEMPT to score in the Lower Hub?"
-        >The robot made an ATTEMPT to score in the Lower Hub<br>
+        >&emsp;The robot made an ATTEMPT to score in the Lower Hub<br>
         <input
         placeholder="off"
         type="checkbox"
         name="entry.947038770"
         data-name="Did the robot not attempt to score?"
         id="Did the robot not attempt to score?"
-        >The robot did not attempt to score<br>
+        >&emsp;The robot did not attempt to score<br>
 </fieldset>
 <fieldset>
     <label for="How many points did the team receive in End Game?">How many points did the team receive in End Game?<br></label>
@@ -213,10 +213,10 @@ required>
     name="entry.1080933142"
     data-name="Did it interact with the Human Player?"
     id="Did it interact with the Human Player?"
-    >The robot interacts with the Human Player<br>
+    >&emsp;The robot interacts with the Human Player<br>
 </fieldset>
 <br>
-<h2>Post Game<h4 style="color: gray;">Fill this out after the game. Watch the game closely, and take note of important events.</h4></h2>
+<h2>Post Game<h4 style="color: gray;">&emsp;Fill this out after the game. Watch the game closely, and take note of important events.</h4></h2>
 <fieldset>
     <label>How would you estimate the consistency of the team's performance in the auton?</label><br>
     <select
@@ -251,9 +251,10 @@ required>
     <textarea rows="4" cols="50" name="entry.1013139442" placeholder="Team is pretty mid..."></textarea>
 </fieldset>
 <br>
-<input type="submit" value="Submit Form">
-<input type="reset" value="Reset Form">
-
+<p style="text-align:center">
+<input type="submit" value="Submit Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;">
+<input type="reset" value="Reset Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;">   
+</p>
 </form>
 <br><br><br>
 <footer style="font-size:x-small">RAPID REACT℠ is a trademark of For Inspiration and
