default to 'off'

--- a/index.html
+++ b/index.html
@@ -15,13 +15,85 @@
     data-last-entry="32"
     data-is-first-page="true"
 >
+<!--FORM CHECKBOX OVERRIDES TO WRITE OFF ON UNCHECKED BOXES-->
+<input
+value="off"
+type="hidden"
+name="entry.321248479"
+>
+<input
+value="off"
+type="hidden"
+name="entry.1745221229"
+>
+<input
+value="off"
+type="hidden"
+name="entry.189327560"
+>
+<input
+value="off"
+type="hidden"
+name="entry.51519363"
+>
+<input
+value="off"
+type="hidden"
+name="entry.1343844870"
+>
+<input
+value="off"
+type="hidden"
+name="entry.332731239"
+>
+<input
+value="off"
+type="hidden"
+name="entry.412041471"
+>
+<input
+value="off"
+type="hidden"
+name="entry.984983966"
+>
+<input
+value="off"
+type="hidden"
+name="entry.1220637130"
+>
+<input
+value="off"
+type="hidden"
+name="entry.1277000981"
+>
+<input
+value="off"
+type="hidden"
+name="entry.1157236568"
+>
+<input
+value="off"
+type="hidden"
+name="entry.794477414"
+>
+<input
+value="off"
+type="hidden"
+name="entry.947038770"
+>
+<input
+value="off"
+type="hidden"
+name="entry.1080933142"
+>
+<!--END OVERRIDES-->
 <h1>2022 Scouting: RAPID REACT℠</h1>
 <br>
 <h2>Pre-Match:<h4 style="color: #a9a9a9;">&emsp;Get this done <b>before</b> the match starts!</h4></h2>
 <fieldset>
 <label for="Your Name">Your Name<br></label>
 <input
-placeholder="John Doe"
+placeholder="Amon Gus"
 type="text"
 name="entry.398176575"
 data-name="Your Name"
@@ -53,7 +125,7 @@ required>
 <fieldset>
     <label for="Match Number">Match Number<br></label>
     <input
-        placeholder="0001"
+        placeholder="01"
         type="number"
         name="entry.508602665"
         data-name="Match Number"
