made it ungoogl

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 <link rel="stylesheet" href="main.css" rel="stylesheet" type="text/css">
 </head>
+<iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
 <form 
     action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSceM1QOqjoiuAotA64kN3k_4kJRKttiTHGS3mhGfXbxNOJlFg/formResponse"
-    target="_self"
+    target="dummyframe"
     method="POST"
     id="mG61Hd"
     jsmodel="TOfxwf Q91hve CEkLOc"
@@ -18,73 +19,87 @@
 <!--FORM CHECKBOX OVERRIDES TO WRITE OFF ON UNCHECKED BOXES-->
 <input
 value="off"
-type="hidden"
+type="checkbox"
 name="entry.321248479"
+checked hidden
 >
 <input
 value="off"
-type="hidden"
+type="checkbox"
 name="entry.1745221229"
+checked hidden
 >
 <input
 value="off"
-type="hidden"
+type="checkbox"
 name="entry.189327560"
+checked hidden
 >
 <input
 value="off"
-type="hidden"
+type="checkbox"
 name="entry.51519363"
+checked hidden
 >
 <input
 value="off"
-type="hidden"
+type="checkbox"
 name="entry.1343844870"
+checked hidden
 >
 <input
 value="off"
-type="hidden"
+type="checkbox"
 name="entry.332731239"
+checked hidden
 >
 <input
 value="off"
-type="hidden"
+type="checkbox"
 name="entry.412041471"
+checked hidden
 >
 <input
 value="off"
-type="hidden"
+type="checkbox"
 name="entry.984983966"
+checked hidden
 >
 <input
 value="off"
-type="hidden"
+type="checkbox"
 name="entry.1220637130"
+checked hidden
 >
 <input
 value="off"
-type="hidden"
+type="checkbox"
 name="entry.1277000981"
+checked hidden
 >
 <input
 value="off"
-type="hidden"
+type="checkbox"
 name="entry.1157236568"
+checked hidden
 >
 <input
 value="off"
-type="hidden"
+type="checkbox"
 name="entry.794477414"
+checked hidden
 >
 <input
 value="off"
-type="hidden"
+type="checkbox"
 name="entry.947038770"
+checked hidden
 >
 <input
 value="off"
-type="hidden"
+type="checkbox"
 name="entry.1080933142"
+checked hidden hidden
 >
 <!--END OVERRIDES-->
 <h1>2022 Scouting: RAPID REACT℠</h1>
@@ -158,6 +173,7 @@ required>
     <br>
     <input
         placeholder="off"
+        value="on"
         type="checkbox"
         name="entry.321248479"
         data-name="Can the robot score in the Upper Hub?"
@@ -165,6 +181,7 @@ required>
         >&emsp;The robot can score in the Upper Hub<br>
         <input
         placeholder="off"
+        value="on"
         type="checkbox"
         name="entry.1745221229"
         data-name="Can the robot score in the Lower Hub?"
@@ -172,6 +189,7 @@ required>
         >&emsp;The robot can score in the Lower Hub<br>
         <input
         placeholder="off"
+        value="on"
         type="checkbox"
         name="entry.189327560"
         data-name="Can the robot climb to the low bar?"
@@ -179,6 +197,7 @@ required>
         >&emsp;The robot can climb to the low bar<br>
         <input
         placeholder="off"
+        value="on"
         type="checkbox"
         name="entry.51519363"
         data-name="Can the robot climb to the mid bar?"
@@ -186,6 +205,7 @@ required>
         >&emsp;The robot can climb to the mid bar<br>
         <input
         placeholder="off"
+        value="on"
         type="checkbox"
         name="entry.1343844870"
         data-name="Can the robot climb to the high bar?"
@@ -193,6 +213,7 @@ required>
         >&emsp;The robot can climb to the high bar<br>
         <input
         placeholder="off"
+        value="on"
         type="checkbox"
         name="entry.332731239"
         data-name="Can the robot climb to the traversal bar?"
@@ -205,6 +226,7 @@ required>
     <br>
     <input
         placeholder="off"
+        value="on"
         type="checkbox"
         name="entry.412041471"
         data-name="During Auton, did the robot successfully taxi from their tarmac, retrieve and score their assigned cargo into the hub?"
@@ -212,6 +234,7 @@ required>
         >&emsp;During Auton, the robot successfully taxied from their tarmac, retrieved and scored their assigned cargo into the hub<br>
         <input
         placeholder="off"
+        value="on"
         type="checkbox"
         name="entry.984983966"
         data-name="During Auton, did the robot successfully shoot cargo into the hubs?"
@@ -219,6 +242,7 @@ required>
         >&emsp;During Auton, the robot successfully shoot cargo into the hubs<br>
         <input
         placeholder="off"
+        value="on"
         type="checkbox"
         name="entry.1220637130"
         data-name="During Auton, did the robot retrieve cargo from the field?"
@@ -226,6 +250,7 @@ required>
         >&emsp;During Auton, the robot retrieved cargo from the field<br>
         <input
         placeholder="off"
+        value="on"
         type="checkbox"
         name="entry.1277000981"
         data-name="During Auton, did the robot fail to score points?"
@@ -237,6 +262,7 @@ required>
     <br>
         <input
         placeholder="off"
+        value="on"
         type="checkbox"
         name="entry.1157236568"
         data-name="Did the robot ATTEMPT to score in the Upper Hub?"
@@ -244,6 +270,7 @@ required>
         >&emsp;The robot made an ATTEMPT to score in the Upper Hub<br>
         <input
         placeholder="off"
+        value="on"
         type="checkbox"
         name="entry.794477414"
         data-name="Did the robot ATTEMPT to score in the Lower Hub?"
@@ -251,6 +278,7 @@ required>
         >&emsp;The robot made an ATTEMPT to score in the Lower Hub<br>
         <input
         placeholder="off"
+        value="on"
         type="checkbox"
         name="entry.947038770"
         data-name="Did the robot not attempt to score?"
@@ -281,6 +309,7 @@ required>
 <fieldset>
     <input
     placeholder="off"
+    value="on"
     type="checkbox"
     name="entry.1080933142"
     data-name="Did it interact with the Human Player?"
@@ -405,6 +434,4 @@ required>
             0,
         ];
     </script>
-    
-<script id="base-js" src="https://www.gstatic.com/_/freebird/_/js/k=freebird.vcss.en.y6rhATk02EU.O/d=1/rs=AMjVe6jH1XwcUw2S49ST2dv0i1UfHT6jJw/m=viewer_base" nonce="d41UQq4mnBd29dijiVdS9w"></script>
 </html>
