--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ required>
 </p>
 </form>
 <br><br><br>
-<footer style="font-size:x-small">RAPID REACT℠ is a trademark of For Inspiration and
+<footer style="font-size:x-small">©2022 Jayen Agrawal, available under the MIT license. RAPID REACT℠ is a trademark of For Inspiration and
     Recognition of Science and Technology (FIRST). ©2021 FIRST. All rights reserved. Used with non-exclusive permission.</footer>
     <script type="text/javascript" nonce="dYs+J4fDaypbJcWWfITbVw">
         var FB_PUBLIC_LOAD_DATA_ = [
