tutorial, code readability

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 <link rel="stylesheet" href="main.css" rel="stylesheet" type="text/css">
 </head>
-<iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
+<iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe><!--does not show, prevents gform redirect-->
 <form 
     action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSceM1QOqjoiuAotA64kN3k_4kJRKttiTHGS3mhGfXbxNOJlFg/formResponse"
     target="dummyframe"
+    onclick="window.location.href = 'done.html';"
     method="POST"
     id="mG61Hd"
     jsmodel="TOfxwf Q91hve CEkLOc"
@@ -360,6 +361,7 @@ required>
 <br><br><br>
 <footer style="font-size:x-small">©2022 Jayen Agrawal, available under the MIT license. RAPID REACT℠ is a trademark of For Inspiration and
     Recognition of Science and Technology (FIRST). ©2021 FIRST. All rights reserved. Used with non-exclusive permission.</footer>
+    <!--GOOGLEFORM JSON-->
     <script type="text/javascript" nonce="dYs+J4fDaypbJcWWfITbVw">
         var FB_PUBLIC_LOAD_DATA_ = [
             null,
@@ -434,4 +436,5 @@ required>
             0,
         ];
     </script>
+    <!--END GOOGLEFORM JSON-->
 </html>
