bool, no button css needed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <form 
     action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSceM1QOqjoiuAotA64kN3k_4kJRKttiTHGS3mhGfXbxNOJlFg/formResponse"
     target="dummyframe"
-    onclick="window.location.href = 'done.html';"
     method="POST"
     id="mG61Hd"
     jsmodel="TOfxwf Q91hve CEkLOc"
@@ -16,91 +15,79 @@
     data-first-entry="0"
     data-last-entry="32"
     data-is-first-page="true"
+    name="mainForm"
 >
-<!--FORM CHECKBOX OVERRIDES TO WRITE OFF ON UNCHECKED BOXES-->
+<!--onclick="window.location.href = 'done.html';"-->
+<!--FORM CHECKBOX OVERRIDES TO WRITE OFF ON UNBOXES-->
 <input
-value="off"
-type="checkbox"
+type="text"value="false"
 name="entry.321248479"
-checked hidden
+hidden
 >
 <input
-value="off"
-type="checkbox"
+type="text" value="false"
 name="entry.1745221229"
-checked hidden
+hidden
 >
 <input
-value="off"
-type="checkbox"
+type="text" value="false"
 name="entry.189327560"
-checked hidden
+hidden
 >
 <input
-value="off"
-type="checkbox"
+type="text" value="false"
 name="entry.51519363"
-checked hidden
+hidden
 >
 <input
-value="off"
-type="checkbox"
+type="text" value="false"
 name="entry.1343844870"
-checked hidden
+hidden
 >
 <input
-value="off"
-type="checkbox"
+type="text" value="false"
 name="entry.332731239"
-checked hidden
+hidden
 >
 <input
-value="off"
-type="checkbox"
+type="text" value="false"
 name="entry.412041471"
-checked hidden
+hidden
 >
 <input
-value="off"
-type="checkbox"
+type="text" value="false"
 name="entry.984983966"
-checked hidden
+hidden
 >
 <input
-value="off"
-type="checkbox"
+type="text" value="false"
 name="entry.1220637130"
-checked hidden
+hidden
 >
 <input
-value="off"
-type="checkbox"
+type="text" value="false"
 name="entry.1277000981"
-checked hidden
+hidden
 >
 <input
-value="off"
-type="checkbox"
+type="text" value="false"
 name="entry.1157236568"
-checked hidden
+hidden
 >
 <input
-value="off"
-type="checkbox"
+type="text" value="false"
 name="entry.794477414"
-checked hidden
+hidden
 >
 <input
-value="off"
-type="checkbox"
+type="text" value="false"
 name="entry.947038770"
-checked hidden
+hidden
 >
 <input
-value="off"
-type="checkbox"
+type="text" value="false"
 name="entry.1080933142"
-checked hidden hidden
+hidden
 >
 <!--END OVERRIDES-->
 <h1>2022 Scouting: RAPID REACT℠</h1>
@@ -174,7 +161,7 @@ required>
     <br>
     <input
         placeholder="off"
-        value="on"
+        value="true"
         type="checkbox"
         name="entry.321248479"
         data-name="Can the robot score in the Upper Hub?"
@@ -182,7 +169,7 @@ required>
         >&emsp;The robot can score in the Upper Hub<br>
         <input
         placeholder="off"
-        value="on"
+        value="true"
         type="checkbox"
         name="entry.1745221229"
         data-name="Can the robot score in the Lower Hub?"
@@ -190,7 +177,7 @@ required>
         >&emsp;The robot can score in the Lower Hub<br>
         <input
         placeholder="off"
-        value="on"
+        value="true"
         type="checkbox"
         name="entry.189327560"
         data-name="Can the robot climb to the low bar?"
@@ -198,7 +185,7 @@ required>
         >&emsp;The robot can climb to the low bar<br>
         <input
         placeholder="off"
-        value="on"
+        value="true"
         type="checkbox"
         name="entry.51519363"
         data-name="Can the robot climb to the mid bar?"
@@ -206,7 +193,7 @@ required>
         >&emsp;The robot can climb to the mid bar<br>
         <input
         placeholder="off"
-        value="on"
+        value="true"
         type="checkbox"
         name="entry.1343844870"
         data-name="Can the robot climb to the high bar?"
@@ -214,7 +201,7 @@ required>
         >&emsp;The robot can climb to the high bar<br>
         <input
         placeholder="off"
-        value="on"
+        value="true"
         type="checkbox"
         name="entry.332731239"
         data-name="Can the robot climb to the traversal bar?"
@@ -227,7 +214,7 @@ required>
     <br>
     <input
         placeholder="off"
-        value="on"
+        value="true"
         type="checkbox"
         name="entry.412041471"
         data-name="During Auton, did the robot successfully taxi from their tarmac, retrieve and score their assigned cargo into the hub?"
@@ -235,7 +222,7 @@ required>
         >&emsp;During Auton, the robot successfully taxied from their tarmac, retrieved and scored their assigned cargo into the hub<br>
         <input
         placeholder="off"
-        value="on"
+        value="true"
         type="checkbox"
         name="entry.984983966"
         data-name="During Auton, did the robot successfully shoot cargo into the hubs?"
@@ -243,7 +230,7 @@ required>
         >&emsp;During Auton, the robot successfully shoot cargo into the hubs<br>
         <input
         placeholder="off"
-        value="on"
+        value="true"
         type="checkbox"
         name="entry.1220637130"
         data-name="During Auton, did the robot retrieve cargo from the field?"
@@ -251,7 +238,7 @@ required>
         >&emsp;During Auton, the robot retrieved cargo from the field<br>
         <input
         placeholder="off"
-        value="on"
+        value="true"
         type="checkbox"
         name="entry.1277000981"
         data-name="During Auton, did the robot fail to score points?"
@@ -263,7 +250,7 @@ required>
     <br>
         <input
         placeholder="off"
-        value="on"
+        value="true"
         type="checkbox"
         name="entry.1157236568"
         data-name="Did the robot ATTEMPT to score in the Upper Hub?"
@@ -271,7 +258,7 @@ required>
         >&emsp;The robot made an ATTEMPT to score in the Upper Hub<br>
         <input
         placeholder="off"
-        value="on"
+        value="true"
         type="checkbox"
         name="entry.794477414"
         data-name="Did the robot ATTEMPT to score in the Lower Hub?"
@@ -279,7 +266,7 @@ required>
         >&emsp;The robot made an ATTEMPT to score in the Lower Hub<br>
         <input
         placeholder="off"
-        value="on"
+        value="true"
         type="checkbox"
         name="entry.947038770"
         data-name="Did the robot not attempt to score?"
@@ -310,7 +297,7 @@ required>
 <fieldset>
     <input
     placeholder="off"
-    value="on"
+    value="true"
     type="checkbox"
     name="entry.1080933142"
     data-name="Did it interact with the Human Player?"
@@ -354,7 +341,7 @@ required>
 </fieldset>
 <br>
 <p style="text-align:center">
-<input type="submit" value="Submit Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;">
+<input type="submit" value="Submit Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;">   
 <input type="reset" value="Reset Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;">   
 </p>
 </form>
