flex for content container

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <link rel="stylesheet" href="main.css" rel="stylesheet" type="text/css">
 </head>
+<body>
+<div class="container">
 <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe><!--does not show, prevents gform redirect-->
 <form 
     action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSceM1QOqjoiuAotA64kN3k_4kJRKttiTHGS3mhGfXbxNOJlFg/formResponse"
@@ -344,10 +346,10 @@ required>
 <input type="submit" value="Submit Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;">   
 <input type="reset" value="Reset Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;">   
 </p>
+<p style="font-size:x-small">©2022 Jayen Agrawal, available under the MIT license. RAPID REACT℠ is a trademark of For Inspiration and
+    Recognition of Science and Technology (FIRST). ©2021 FIRST. All rights reserved. Used with non-exclusive permission.</p>
 </form>
-<br><br><br>
-<footer style="font-size:x-small">©2022 Jayen Agrawal, available under the MIT license. RAPID REACT℠ is a trademark of For Inspiration and
-    Recognition of Science and Technology (FIRST). ©2021 FIRST. All rights reserved. Used with non-exclusive permission.</footer>
+<br><br>
     <!--GOOGLEFORM JSON-->
     <script type="text/javascript" nonce="dYs+J4fDaypbJcWWfITbVw">
         var FB_PUBLIC_LOAD_DATA_ = [
@@ -424,4 +426,6 @@ required>
         ];
     </script>
     <!--END GOOGLEFORM JSON-->
+    </div>
+    </body>
 </html>
