utf8 charset, duplicate tags removed

--- a/done.html
+++ b/done.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html style="height: 100%;">
 <head>
-<link rel="stylesheet" href="main.css" rel="stylesheet" type="text/css">
+<meta charset="UTF-8">
+<link rel="stylesheet" href="main.css" type="text/css">
 <meta http-equiv="refresh" content="3;url=index.html" />
 </head>
 <h1>Submitted!</h1>
