--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="main.css" rel="stylesheet" type="text/css">
+<meta charset="UTF-8">
+<link rel="stylesheet" href="main.css" type="text/css">
 </head>
 <body>
 <div class="container">
