--- a/backend/gform.html
+++ b/backend/gform.html
@@ -4,20 +4,13 @@
 <link rel="stylesheet" href="main.css" rel="stylesheet" type="text/css">
 </head>
 <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe><!--does not show, prevents gform redirect-->
-<form 
-    action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSceM1QOqjoiuAotA64kN3k_4kJRKttiTHGS3mhGfXbxNOJlFg/formResponse"
-    target="dummyframe"
-    onclick="window.location.href = 'done.html';"
-    method="POST"
-    id="mG61Hd"
-    jsmodel="TOfxwf Q91hve CEkLOc"
-    data-shuffle-seed="7462243052789371287"
-    data-response="%.@.[]]"
-    data-first-entry="0"
-    data-last-entry="32"
-    data-is-first-page="true"
->
+<!--SEARCH IN YOUR GOOGLE FORM SCOURCE CODE (/viewForm) AND FIND THE <form> STARTING TAG-->
+<!--<form
+
+
+>-->
 <!--FORM CHECKBOX OVERRIDES TO WRITE OFF ON UNCHECKED BOXES-->
+<!--Change the entry numbers to yours (entry.*)-->
 <input
 value="off"
 type="checkbox"
@@ -106,6 +99,7 @@ checked hidden hidden
 <h1>2022 Scouting: RAPID REACT℠</h1>
 <br>
 <h2>Pre-Match:<h4 style="color: #a9a9a9;">&emsp;Get this done <b>before</b> the match starts!</h4></h2>
+<!--Change the entry numbers to yours (entry.*)-->
 <fieldset>
 <label for="Your Name">Your Name<br></label>
 <input
@@ -362,7 +356,8 @@ required>
 <footer style="font-size:x-small">©2022 Jayen Agrawal, available under the MIT license. RAPID REACT℠ is a trademark of For Inspiration and
     Recognition of Science and Technology (FIRST). ©2021 FIRST. All rights reserved. Used with non-exclusive permission.</footer>
     <!--GOOGLEFORM JSON-->
-    <script type="text/javascript" nonce="dYs+J4fDaypbJcWWfITbVw">
+    <!--Find this JSON in the end of your GFORM source code-->
+    <script type="text/javascript" nonce="">
         var FB_PUBLIC_LOAD_DATA_ = [
             null,
             [
@@ -429,9 +424,9 @@ required>
             null,
             null,
             1,
-            "e/1FAIpQLSceM1QOqjoiuAotA64kN3k_4kJRKttiTHGS3mhGfXbxNOJlFg",
+            "",
             1,
-            '[{"data":{"value":[]},"keyPath":["syncMap","applicationFonts","6"],"state":{"hashValue":"00000000"}},{"data":{"value":[]},"keyPath":["syncMap","domainFonts","0"],"state":{"hashValue":"00000000"}},{"data":{"familyList":["Alegreya","Amatic SC","Bree Serif","Calibri","Cambria","Merriweather","Permanent Marker","Pinyon Script","Playfair Display","Proxima Nova","Roboto","Roboto Mono","Ultra","Varela Round","Open Sans"],"recentlyUsedFamilyList":["Times New Roman","Open Sans","Roboto","Arial","Cambria"],"transitionedFamilyList":["Cambria","Open Sans"],"hasTransitioned":true},"keyPath":["syncMap","preferences","docs-fonts"],"state":{"timestamp":1646710477724152}},{"data":{"value":0},"keyPath":["syncMap","preferences","docs-unsupported_feature_warning_callout_bubble_shown_count"],"state":{"timestamp":1647368358784000}},{"data":{"value":false},"keyPath":["syncMap","preferences","mae-show_addons_menu_promo"],"state":{"timestamp":1645566339181884}},{"data":{"value":false},"keyPath":["syncMap","preferences","docs-homescreen-aips"],"state":{"timestamp":1634675545923700}},{"data":{},"keyPath":["syncMap","preferences","docs-homescreen-asp","6"],"state":{"timestamp":1642741200907976}},{"data":{"value":0},"keyPath":["syncMap","preferences","docs-homescreen-ftbdct"],"state":{"timestamp":1634675545923700}},{"data":{"value":false},"keyPath":["syncMap","preferences","docs-homescreen-dbs"],"state":{"timestamp":1634675545923700}},{"data":{"value":false},"keyPath":["syncMap","preferences","docs-homescreen-ht"],"state":{"timestamp":1634675545923700}},{"data":{"filter_type":2},"keyPath":["syncMap","preferences","docs-homescreen-of","1"],"state":{"timestamp":1634675545923700}},{"data":{"value":true},"keyPath":["syncMap","preferences","docs-homescreen-wws"],"state":{"timestamp":1634675545923700}},{"data":{"value":0},"keyPath":["syncMap","preferences","docs-etg-lvt"],"state":{"timestamp":1647368358791000}},{"data":{"value":false},"keyPath":["syncMap","preferences","docs-screenreader"],"state":{"timestamp":1647368358795000}},{"data":{"value":false},"keyPath":["syncMap","preferences","docs-enable_braille"],"state":{"timestamp":1647368358795000}},{"data":{"value":false},"keyPath":["syncMap","preferences","docs-mute_collaborators"],"state":{"timestamp":1647368358795000}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-show_chooser"],"state":{"timestamp":1647316886284191}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-show_link_form_promo"],"state":{"timestamp":1647316886284191}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-show_whats_new"],"state":{"timestamp":1647316886284191}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-expand_dasher_options"],"state":{"timestamp":1647316886284191}},{"data":{"proto":"[]"},"keyPath":["syncMap","preferences","freebird-auto_create_sink"],"state":{"timestamp":1647368358798000}},{"data":{"proto":"[]"},"keyPath":["syncMap","preferences","freebird-ui_version"],"state":{"timestamp":1647368358799000}},{"data":{"value":false},"keyPath":["syncMap","preferences","freebird-questions_required_by_default"],"state":{"timestamp":1647316886284191}},{"data":{"value":false},"keyPath":["syncMap","preferences","freebird-collect_usernames_by_default"],"state":{"timestamp":1647316886284191}},{"data":{"value":0},"keyPath":["syncMap","preferences","freebird-default_point_value"],"state":{"timestamp":1647316886284191}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-show_assessments_guided_help"],"state":{"timestamp":1647316886284191}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-autovalidate_guided_help"],"state":{"timestamp":1647316886284191}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-show_qxq_guided_help"],"state":{"timestamp":1647316886284191}},{"data":{"value":false},"keyPath":["syncMap","preferences","freebird-show_braveheart_guided_help"],"state":{"timestamp":1647316886284191}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-show_manual_grading_guided_help"],"state":{"timestamp":1647316886284191}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-show_record_view_guided_help"],"state":{"timestamp":1647316886284191}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-show_brain_guided_help"],"state":{"timestamp":1647316886284191}},{"data":{"value":false},"keyPath":["syncMap","preferences","freebird-has_seen_braveheart_theme_warning"],"state":{"timestamp":1647316886284191}},{"data":{"value":false},"keyPath":["syncMap","preferences","freebird-show_custom_themes_toast"],"state":{"timestamp":1647316886284191}},{"data":{"value":false},"keyPath":["syncMap","preferences","freebird-show_edu_bundle_18_toast"],"state":{"timestamp":1647316886284191}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-show_quizzes_intro"],"state":{"timestamp":1647316886284191}},{"data":{"value":false},"keyPath":["syncMap","preferences","freebird-show_question_import_guided_help"],"state":{"timestamp":1647316886284191}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-show_locked_mode_guided_help"],"state":{"timestamp":1647316886284191}},{"data":{"value":false},"keyPath":["syncMap","preferences","freebird-show_draft_responses_modal"],"state":{"timestamp":1647316886284191}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-expanded_fonts_guided_help"],"state":{"timestamp":1647316886284191}}]',
+            '[]',
             1,
             0,
         ];
