--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 <div class="container">
+<iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe><!--does not show, prevents gform redirect-->
 <form 
-    action="submit.php"
+    action="https://jayagra.com/scout/submit.php"
     target="_self"
     method="POST"
     name="mainForm"
@@ -89,13 +90,20 @@ hidden
 <br>
 <h2>Pre-Match:<h4 style="color: #a9a9a9;">&emsp;Get this done <b>before</b> the match starts!</h4></h2>
 <fieldset>
+<label for="Form Key">Form Key&emsp;<span style="color:gray;">If this is not entered correctly, the server will reject your entire response</span><br></label>
+<input
+placeholder="xxxxxxxxxxxx"
+type="text"
+name="entry.key"
+id="psw1"
+required>
+</fieldset>
+<fieldset>
 <label for="Your Name">Your Name<br></label>
 <input
 placeholder="Amon Gus"
 type="text"
 name="entry.398176575"
-data-name="Your Name"
-id="Your Name"
 required>
 </fieldset>
 
@@ -105,8 +113,6 @@ required>
     placeholder="766"
     type="number"
     name="entry.1638702746"
-    data-name="Number of the Team you are Scouting"
-    id="Number of the Team you are Scouting"
     required>
 </fieldset>
 
@@ -116,8 +122,6 @@ required>
     placeholder="Bears"
     type="text"
     name="entry.215295328"
-    data-name="Name of the Team you are Scouting"
-    id="Name of the Team you are Scouting"
     required>
 </fieldset>
 <fieldset>
@@ -126,8 +130,6 @@ required>
         placeholder="01"
         type="number"
         name="entry.508602665"
-        data-name="Match Number"
-        id="Match Number"
         required>
 </fieldset>
 <h2>Pit Scouting<h4 style="color: #a9a9a9;">&emsp;If you don't know the answer, just ask the team themselves</h4></h2>
@@ -137,8 +139,6 @@ required>
         placeholder="1 or 2"
         type="number"
         name="entry.1565854744"
-        data-name="How much cargo can the robot hold at a time?"
-        id="How much cargo can the robot hold at a time?"
         required>
 </fieldset>
 <fieldset>
@@ -147,8 +147,6 @@ required>
         placeholder="29"
         type="number"
         name="entry.177680938"
-        data-name="How much does the robot weight?"
-        id="How much does the robot weight?"
         required> lbs
 </fieldset>
 <fieldset>
@@ -159,48 +157,36 @@ required>
         value="true"
         type="checkbox"
         name="entry.321248479"
-        data-name="Can the robot score in the Upper Hub?"
-        id="Can the robot score in the Upper Hub?"
         >&emsp;The robot can score in the Upper Hub<br>
         <input
         placeholder="off"
         value="true"
         type="checkbox"
         name="entry.1745221229"
-        data-name="Can the robot score in the Lower Hub?"
-        id="Can the robot score in the Lower Hub?"
         >&emsp;The robot can score in the Lower Hub<br>
         <input
         placeholder="off"
         value="true"
         type="checkbox"
         name="entry.189327560"
-        data-name="Can the robot climb to the low bar?"
-        id="Can the robot climb to the low bar?"
         >&emsp;The robot can climb to the low bar<br>
         <input
         placeholder="off"
         value="true"
         type="checkbox"
         name="entry.51519363"
-        data-name="Can the robot climb to the mid bar?"
-        id="Can the robot climb to the mid bar?"
         >&emsp;The robot can climb to the mid bar<br>
         <input
         placeholder="off"
         value="true"
         type="checkbox"
         name="entry.1343844870"
-        data-name="Can the robot climb to the high bar?"
-        id="Can the robot climb to the high bar?"
         >&emsp;The robot can climb to the high bar<br>
         <input
         placeholder="off"
         value="true"
         type="checkbox"
         name="entry.332731239"
-        data-name="Can the robot climb to the traversal bar?"
-        id="Can the robot climb to the traversal bar?"
         >&emsp;The robot can climb to the traversal bar<br>
 </fieldset>
 <h2>Match Scouting<h4 style="color: #a9a9a9;">&emsp;Record as the game goes on</h4></h2>
@@ -212,32 +198,24 @@ required>
         value="true"
         type="checkbox"
         name="entry.412041471"
-        data-name="During Auton, did the robot successfully taxi from their tarmac, retrieve and score their assigned cargo into the hub?"
-        id="During Auton, did the robot successfully taxi from their tarmac, retrieve and score their assigned cargo into the hub?"
         >&emsp;During Auton, the robot successfully taxied from their tarmac, retrieved and scored their assigned cargo into the hub<br>
         <input
         placeholder="off"
         value="true"
         type="checkbox"
         name="entry.984983966"
-        data-name="During Auton, did the robot successfully shoot cargo into the hubs?"
-        id="During Auton, did the robot successfully shoot cargo into the hubs?"
         >&emsp;During Auton, the robot successfully shoot cargo into the hubs<br>
         <input
         placeholder="off"
         value="true"
         type="checkbox"
         name="entry.1220637130"
-        data-name="During Auton, did the robot retrieve cargo from the field?"
-        id="During Auton, did the robot retrieve cargo from the field?"
         >&emsp;During Auton, the robot retrieved cargo from the field<br>
         <input
         placeholder="off"
         value="true"
         type="checkbox"
         name="entry.1277000981"
-        data-name="During Auton, did the robot fail to score points?"
-        id="During Auton, did the robot fail to score points?"
         >&emsp;During Auton, the robot failed to score points<br>
 </fieldset>
 <fieldset>
@@ -248,24 +226,18 @@ required>
         value="true"
         type="checkbox"
         name="entry.1157236568"
-        data-name="Did the robot ATTEMPT to score in the Upper Hub?"
-        id="Did the robot ATTEMPT to score in the Upper Hub?"
         >&emsp;The robot made an ATTEMPT to score in the Upper Hub<br>
         <input
         placeholder="off"
         value="true"
         type="checkbox"
         name="entry.794477414"
-        data-name="Did the robot ATTEMPT to score in the Lower Hub?"
-        id="Did the robot ATTEMPT to score in the Lower Hub?"
         >&emsp;The robot made an ATTEMPT to score in the Lower Hub<br>
         <input
         placeholder="off"
         value="true"
         type="checkbox"
         name="entry.947038770"
-        data-name="Did the robot not attempt to score?"
-        id="Did the robot not attempt to score?"
         >&emsp;The robot did not attempt to score<br>
 </fieldset>
 <fieldset>
@@ -274,19 +246,14 @@ required>
         placeholder="7"
         type="number"
         name="entry.699092517"
-        data-name="How many points did the team receive in End Game?"
-        id="How many points did the team receive in End Game?"
         required> points
 </fieldset>
 <fieldset>
     <label for="Rule Violations?">Rule Violations?<br></label>
     <input
         placeholder="0"
-        value="0"
         type="number"
         name="entry.1019141500"
-        data-name="Rule Violations?"
-        id="Rule Violations?"
         required>
 </fieldset>
 <fieldset>
@@ -295,8 +262,6 @@ required>
     value="true"
     type="checkbox"
     name="entry.1080933142"
-    data-name="Did it interact with the Human Player?"
-    id="Did it interact with the Human Player?"
     >&emsp;The robot interacts with the Human Player<br>
 </fieldset>
 <br>
@@ -305,8 +270,6 @@ required>
     <label>How would you estimate the consistency of the team's performance in the auton?</label><br>
     <select
     name="entry.1152778382"
-    data-name="How would you estimate the consistency of the team's performance in the auton?"
-    id="How would you estimate the consistency of the team's performance in the auton?"
     required>
     <option value="Their performance seems promising and consistent">Their performance seems promising and consistent</option>
     <option value="Their performance seems somewhat consistent">Their performance seems somewhat consistent</option>
@@ -343,6 +306,82 @@ required>
     Recognition of Science and Technology (FIRST). ©2021 FIRST. All rights reserved. Used with non-exclusive permission.</p>
 </form>
 <br><br>
+    <!--GOOGLEFORM JSON-->
+    <script type="text/javascript" nonce="dYs+J4fDaypbJcWWfITbVw">
+        var FB_PUBLIC_LOAD_DATA_ = [
+            null,
+            [
+                "",
+                [
+                    [1949737934, "Pre-Match", "Get this done before it starts", 6],
+                    [1860784524, "Your Name", null, 0, [[398176575, null, 0]]],
+                    [999995222, "Number of the Team you are Scouting", null, 0, [[1638702746, null, 0, null, [[1, 9, null, "Please write a valid Team Number"]]]]],
+                    [1636829099, "Name of the Team you are Scouting", null, 0, [[215295328, null, 0]]],
+                    [1377752686, "Match Number", null, 0, [[508602665, null, 0, null, [[1, 9, [""]]]]]],
+                    [869226278, "Pit Scouting", "If you don't know the answer, just ask the team themselves", 6],
+                    [782358186, "How much cargo can the robot hold at a time?", null, 0, [[1565854744, null, 0]]],
+                    [1783225358, "How much does the robot weigh?", null, 0, [[177680938, null, 0, null, [[1, 1, ["-1"], "This answer is invalid dude"]]]]],
+                    [1749995150, "Can the robot score in the Upper Hub?", null, 0, [[321248479, null, 0]]],
+                    [1744235703, "Can the robot score in the Lower Hub?", null, 0, [[1745221229, null, 0]]],
+                    [85686490, "Can the robot climb to the low bar?", null, 0, [[189327560, null, 0]]],
+                    [1245398642, "Can the robot climb to the mid bar?", null, 0, [[51519363, null, 0]]],
+                    [595867168, "Can the robot climb to the high bar?", null, 0, [[1343844870, null, 0]]],
+                    [817264604, "Can the robot climb to the traversal bar?", null, 0, [[332731239, null, 0]]],
+                    [2068831094, "Match Scouting", "Record as the game goes on", 6],
+                    [143772674, "During Auton, did the robot successfully taxi from their tarmac, retrieve and score their assigned cargo into the hub?", null, 0, [[412041471, null, 0]]],
+                    [1831877970, "During Auton, did the robot successfully shoot cargo into the hubs?", null, 0, [[984983966, null, 0]]],
+                    [1173853577, "During Auton, did the robot retrieve cargo from the field?", null, 0, [[1220637130, null, 0]]],
+                    [1255038214, "During Auton, did the robot fail to score points?", null, 0, [[1277000981, null, 0]]],
+                    [1424526779, "Did the robot ATTEMPT to score in the Upper Hub?", null, 0, [[1157236568, null, 0]]],
+                    [1862115427, "Did the robot ATTEMPT to score in the Lower Hub?", null, 0, [[794477414, null, 0]]],
+                    [896176645, "Did the robot not attempt to score?", null, 0, [[947038770, null, 0]]],
+                    [1691986248, "How many points did the team receive in End Game?", null, 0, [[699092517, null, 0, null, [[1, 9, null, "Please provide a numerical value"]]]]],
+                    [1053366515, "Rule Violations?", null, 0, [[1019141500, null, 0]]],
+                    [1581642441, "Did it interact with the Human Player?", null, 0, [[1080933142, null, 0]]],
+                    [200554362, "Post Game", "Fill this out after the game. Watch the game closely, and take note of important events.", 6],
+                    [1248511555, "How would you estimate the consistency of the team's performance in the auton?", null, 0, [[1152778382, null, 0]]],
+                    [1720408069, "Were there any ways not mentioned previously in which the robot received MATCH points?", null, 0, [[309796794, null, 0]]],
+                    [2069924115, "Were there any ways not mentioned previously in which the robot received RANKING points?", null, 1, [[638763658, null, 0]]],
+                    [2070887979, "Any other thoughts about the teleop phase? Actions it took during so?", null, 1, [[711121407, null, 0]]],
+                    [1250792910, "Any thoughts about the driving?", null, 1, [[177753238, null, 0]]],
+                    [1195052745, "Overall assessment? (Would we want to be in an alliance with them?)", null, 1, [[1013139442, null, 0]]],
+                ],
+                ["", 1, 0, 0, 0],
+                null,
+                null,
+                [0, 0],
+                null,
+                null,
+                "2022 Scouting Form",
+                52,
+                [0, 0, 0, 2, 0],
+                null,
+                null,
+                null,
+                null,
+                [2],
+                [[1, 1, 1, 1, 1], 1, 0],
+            ],
+            "/forms",
+            "2022 Scouting Form",
+            null,
+            null,
+            null,
+            "0",
+            null,
+            0,
+            1,
+            null,
+            null,
+            1,
+            "e/1FAIpQLSceM1QOqjoiuAotA64kN3k_4kJRKttiTHGS3mhGfXbxNOJlFg",
+            1,
+            '[{"data":{"value":[]},"keyPath":["syncMap","applicationFonts","6"],"state":{"hashValue":"00000000"}},{"data":{"value":[]},"keyPath":["syncMap","domainFonts","0"],"state":{"hashValue":"00000000"}},{"data":{"familyList":["Alegreya","Amatic SC","Bree Serif","Calibri","Cambria","Merriweather","Permanent Marker","Pinyon Script","Playfair Display","Proxima Nova","Roboto","Roboto Mono","Ultra","Varela Round","Open Sans"],"recentlyUsedFamilyList":["Times New Roman","Open Sans","Roboto","Arial","Cambria"],"transitionedFamilyList":["Cambria","Open Sans"],"hasTransitioned":true},"keyPath":["syncMap","preferences","docs-fonts"],"state":{"timestamp":1646710477724152}},{"data":{"value":0},"keyPath":["syncMap","preferences","docs-unsupported_feature_warning_callout_bubble_shown_count"],"state":{"timestamp":1647368358784000}},{"data":{"value":false},"keyPath":["syncMap","preferences","mae-show_addons_menu_promo"],"state":{"timestamp":1645566339181884}},{"data":{"value":false},"keyPath":["syncMap","preferences","docs-homescreen-aips"],"state":{"timestamp":1634675545923700}},{"data":{},"keyPath":["syncMap","preferences","docs-homescreen-asp","6"],"state":{"timestamp":1642741200907976}},{"data":{"value":0},"keyPath":["syncMap","preferences","docs-homescreen-ftbdct"],"state":{"timestamp":1634675545923700}},{"data":{"value":false},"keyPath":["syncMap","preferences","docs-homescreen-dbs"],"state":{"timestamp":1634675545923700}},{"data":{"value":false},"keyPath":["syncMap","preferences","docs-homescreen-ht"],"state":{"timestamp":1634675545923700}},{"data":{"filter_type":2},"keyPath":["syncMap","preferences","docs-homescreen-of","1"],"state":{"timestamp":1634675545923700}},{"data":{"value":true},"keyPath":["syncMap","preferences","docs-homescreen-wws"],"state":{"timestamp":1634675545923700}},{"data":{"value":0},"keyPath":["syncMap","preferences","docs-etg-lvt"],"state":{"timestamp":1647368358791000}},{"data":{"value":false},"keyPath":["syncMap","preferences","docs-screenreader"],"state":{"timestamp":1647368358795000}},{"data":{"value":false},"keyPath":["syncMap","preferences","docs-enable_braille"],"state":{"timestamp":1647368358795000}},{"data":{"value":false},"keyPath":["syncMap","preferences","docs-mute_collaborators"],"state":{"timestamp":1647368358795000}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-show_chooser"],"state":{"timestamp":1647316886284191}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-show_link_form_promo"],"state":{"timestamp":1647316886284191}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-show_whats_new"],"state":{"timestamp":1647316886284191}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-expand_dasher_options"],"state":{"timestamp":1647316886284191}},{"data":{"proto":"[]"},"keyPath":["syncMap","preferences","freebird-auto_create_sink"],"state":{"timestamp":1647368358798000}},{"data":{"proto":"[]"},"keyPath":["syncMap","preferences","freebird-ui_version"],"state":{"timestamp":1647368358799000}},{"data":{"value":false},"keyPath":["syncMap","preferences","freebird-questions_required_by_default"],"state":{"timestamp":1647316886284191}},{"data":{"value":false},"keyPath":["syncMap","preferences","freebird-collect_usernames_by_default"],"state":{"timestamp":1647316886284191}},{"data":{"value":0},"keyPath":["syncMap","preferences","freebird-default_point_value"],"state":{"timestamp":1647316886284191}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-show_assessments_guided_help"],"state":{"timestamp":1647316886284191}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-autovalidate_guided_help"],"state":{"timestamp":1647316886284191}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-show_qxq_guided_help"],"state":{"timestamp":1647316886284191}},{"data":{"value":false},"keyPath":["syncMap","preferences","freebird-show_braveheart_guided_help"],"state":{"timestamp":1647316886284191}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-show_manual_grading_guided_help"],"state":{"timestamp":1647316886284191}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-show_record_view_guided_help"],"state":{"timestamp":1647316886284191}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-show_brain_guided_help"],"state":{"timestamp":1647316886284191}},{"data":{"value":false},"keyPath":["syncMap","preferences","freebird-has_seen_braveheart_theme_warning"],"state":{"timestamp":1647316886284191}},{"data":{"value":false},"keyPath":["syncMap","preferences","freebird-show_custom_themes_toast"],"state":{"timestamp":1647316886284191}},{"data":{"value":false},"keyPath":["syncMap","preferences","freebird-show_edu_bundle_18_toast"],"state":{"timestamp":1647316886284191}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-show_quizzes_intro"],"state":{"timestamp":1647316886284191}},{"data":{"value":false},"keyPath":["syncMap","preferences","freebird-show_question_import_guided_help"],"state":{"timestamp":1647316886284191}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-show_locked_mode_guided_help"],"state":{"timestamp":1647316886284191}},{"data":{"value":false},"keyPath":["syncMap","preferences","freebird-show_draft_responses_modal"],"state":{"timestamp":1647316886284191}},{"data":{"value":true},"keyPath":["syncMap","preferences","freebird-expanded_fonts_guided_help"],"state":{"timestamp":1647316886284191}}]',
+            1,
+            0,
+        ];
+    </script>
+    <!--END GOOGLEFORM JSON-->
     </div>
     </body>
 </html>
