--- a/index.html
+++ b/index.html
@@ -99,6 +99,13 @@ id="psw1"
 required>
 </fieldset>
 <fieldset>
+    <label for="Event Code">Event Code</label><br>
+<select name="entry.event" required>
+    <option value="CADA">CADA - Sacramento Regional</option>
+    <option value="CASJ">CASJ - Silicon Valley Regional</option>
+</select>
+</fieldset>
+<fieldset>
 <label for="Your Name">Your Name<br></label>
 <input
 placeholder="Amon Gus"
