--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div class="container">
 <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe><!--does not show, prevents gform redirect-->
 <form 
-    action="https://jayagra.com/scout/submit.php"
+    action="submit.php"
     target="_self"
     method="POST"
     name="mainForm"
