no decrease buttons & backend updated

--- a/index.html
+++ b/index.html
@@ -204,42 +204,42 @@ type="text"
 value="0"
 name="madeupper"
 ><br>
-<button onclick="incValueMadeUpper()" type="button" style="width: 5rem; margin-top: 0.35rem;">⟰</button> <button onclick="decValueMadeUpper()" type="button" style="width: 5rem; margin-top: 0.35rem;">⟱</button><br>
+<button onclick="incValueMadeUpper()" type="button" style="width: 9rem; margin-top: 0.35rem;">⟰</button><br>
 Missed Upper Hub shots:<br><input
 id="missedupper"
 type="text"
 value="0"
 name="missedupper"
 ><br>
-<button onclick="incValueMissedUpper()" type="button" style="width: 5rem; margin-top: 0.35rem;">⟰</button> <button onclick="decValueMissedUpper()" type="button" style="width: 5rem; margin-top: 0.35rem;">⟱</button><br>
+<button onclick="incValueMissedUpper()" type="button" style="width: 9rem; margin-top: 0.35rem;">⟰</button><br>
 Made Lower Hub shots:<br><input
 id="madelower"
 type="text"
 value="0"
 name="madelower"
 ><br>
-<button onclick="incValueMadeLower()" type="button" style="width: 5rem; margin-top: 0.35rem;">⟰</button> <button onclick="decValueMadeLower()" type="button" style="width: 5rem; margin-top: 0.35rem;">⟱</button><br>
+<button onclick="incValueMadeLower()" type="button" style="width: 9rem; margin-top: 0.35rem;">⟰</button><br>
 Missed Lower Hub shots:<br><input
 id="missedlower"
 type="text"
 value="0"
 name="missedlower"
 ><br>
-<button onclick="incValueMissedLower()" type="button" style="width: 5rem; margin-top: 0.35rem;">⟰</button> <button onclick="decValueMissedLower()" type="button" style="width: 5rem; margin-top: 0.35rem;">⟱</button><br>
+<button onclick="incValueMissedLower()" type="button" style="width: 9rem; margin-top: 0.35rem;">⟰</button><br>
 Bars attempted:<br><input
 id="barsatt"
 type="text"
 value="0"
 name="barsatt"
 ><br>
-<button onclick="incValueBarsAtt()" type="button" style="width: 5rem; margin-top: 0.35rem;">⟰</button> <button onclick="decValueBarsAtt()" type="button" style="width: 5rem; margin-top: 0.35rem;">⟱</button><br>
+<button onclick="incValueBarsAtt()" type="button" style="width: 9rem; margin-top: 0.35rem;">⟰</button><br>
 Bars climbed:<br><input
 id="barsdone"
 type="text"
 value="0"
 name="barsdone"
 ><br>
-<button onclick="incValueBarsDone()" type="button" style="width: 5rem; margin-top: 0.35rem;">⟰</button> <button onclick="decValueBarsDone()" type="button" style="width: 5rem; margin-top: 0.35rem;">⟱</button><br>
+<button onclick="incValueBarsDone()" type="button" style="width: 9rem; margin-top: 0.35rem;">⟰</button><br>
 </fieldset>
 <fieldset>
     <label>Auton<br></label>
