--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ required>
 <fieldset>
     <label for="How much does the robot weight?">How much does the robot weigh?<br></label>
     <input
-        placeholder="150"
+        placeholder="No more than 125"
         type="number"
         name="entry.177680938"
         required> lbs
